--- a/Resources/Public/Css/listOfMembers.css
+++ b/Resources/Public/Css/listOfMembers.css
@@ -1,7 +1,10 @@
 .my-custom-scrollbar {
     position: relative;
-    height: 250px;
+    height: 350px;
     overflow: auto;
+}
+.members-table{
+    width : 80px;
 }
 .table-wrapper-scroll-y {
     display: block;
