fix displaying list

--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -17,7 +17,9 @@
                 </f:else>
             </f:if>
         </div>
-        <div class="p-2 members-table" >
+    </div>
+    <div class="d-flex flex-row">
+        <div class="p-2 " >
             <div class="table-wrapper-scroll-y my-custom-scrollbar" >
                 <table class="table table-bordered table-striped mb-0">
                     <thead>
@@ -58,5 +60,4 @@
     <br>
 </div>
 
-<br>
 </html>
