--- a/Resources/Private/Templates/Widget/ListOfLastModifiedPagesWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfLastModifiedPagesWidget.html
@@ -3,40 +3,44 @@
       xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
       data-namespace-typo3-fluid="true">
 <div class="widget-content-title">
-  <span>List last modified pages</span>
+  <span>
+    <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfLastMoidifiedPages/locallang.xlf:myLastPages" />
+  </span>
 </div>
-<br>
-<div class="container">
-  <div style="width : 65%; margin-bottom : 1rem; height : 80px;">
-    <div class="d-flex flex-row" >
-      <div class="p-2 " >
-        <div class="table-wrapper-scroll-y my-custom-scrollbar" >
-          <table class="table table-bordered table-striped mb-0">
-            <thead>
-            <tr>
-              <th scope="col">Uid</th>
-              <th scope="col">Title</th>
-              <th scope="col">Creation date</th>
-              <th scope="col">Update date</th>
-              <th scope="col">Slug</th>
-            </tr>
-            </thead>
-            <tbody>
-            <f:for each="{data}" as="item">
-                <tr>
-                  <td>{item.uid}</td>
-                  <td>{item.title}</td>
-                  <td>{item.crdate}</td>
-                  <td>{item.tstamp}</td>
-                  <td>{item.slug}</td>
-                </tr>
-            </f:for>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+<div class="widget-content-main">
+  <div class="widget-table-wrapper">
+    <table class="widget-table">
+      <thead>
+      <tr>
+        <th scope="col">Uid</th>
+        <th scope="col">
+          <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:title" />
+        </th>
+        <th scope="col">
+          <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:creationDate" />
+        </th>
+        <th scope="col">
+          <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:modificationDate" />
+        </th>
+        <th scope="col">Slug</th>
+      </tr>
+      </thead>
+      <tbody>
+      <f:for each="{data}" as="item">
+        <tr>
+          <td>
+            <f:be.link route="web_layout" parameters="{id: item.uid}">
+              {item.uid}
+            </f:be.link>
+          </td>
+          <td>{item.title}</td>
+          <td>{item.crdate}</td>
+          <td>{item.tstamp}</td>
+          <td>{item.slug}</td>
+        </tr>
+      </f:for>
+      </tbody>
+    </table>
   </div>
-
 </div>
 </html>
