--- a/Resources/Private/Templates/Widget/ListOfLastModifiedPagesWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfLastModifiedPagesWidget.html
@@ -8,6 +8,11 @@
   </span>
 </div>
 <div class="widget-content-main">
+  <select name="" id="numberOfItems">
+    <option value="5">5</option>
+    <option value="10">10</option>
+    <option value="20">20</option>
+  </select>
   <div class="widget-table-wrapper">
     <table class="widget-table">
       <thead>
