--- a/Resources/Private/Templates/Widget/ListOfLastCreatedPagesWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfLastCreatedPagesWidget.html
@@ -3,7 +3,9 @@
       xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
       data-namespace-typo3-fluid="true">
 <div class="widget-content-title">
-    <span>Last created pages</span>
+    <span>
+        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:lastCreatedPageInMyGroup" />
+    </span>
 </div>
 <div class="widget-content-main">
     <div class="widget-table-wrapper">
@@ -12,7 +14,10 @@
             <tr>
                 <th scope="col">Uid</th>
                 <th scope="col">
-                    <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:title" />
+                    <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:pageTitle" />
+                </th>
+                <th scope="col">
+                    <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:status" />
                 </th>
                 <th scope="col">
                     <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:creationDate" />
@@ -30,6 +35,18 @@
                         <f:be.link route="web_layout" parameters="{id: item.uid}">
                             {item.uid}
                         </f:be.link>
+                    </td>
+                    <td>
+                        <f:if condition="{item.expired} == 1">
+                            <span class="c-badge c-badge--yellow">
+                               <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:expired" />
+                            </span>
+                                    </f:if>
+                                    <f:if condition="{item.hidden} == 0">
+                            <span class="c-badge c-badge--red">
+                               <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:hidden" />
+                            </span>
+                        </f:if>
                     </td>
                     <td>{item.title}</td>
                     <td>{item.crdate}</td>
