--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -3,7 +3,8 @@
       data-namespace-typo3-fluid="true">
 <div class="widget-content-title">
     <span>
-       Members of my groups ({data.numberOfMembers})
+        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:membersOfMyGroups" /> ({data.numberOfMembers})
+
     </span>
 </div>
 <div class="widget-content-main">
