--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -1,10 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-      xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
       data-namespace-typo3-fluid="true">
 <div class="widget-content-title">
     <span>
-        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:membersOfMyGroups" /> ({data.numberOfMembers})
-
+        {widgetTitle}
     </span>
 </div>
 <div class="widget-content-main">
